syntax = "proto3";

package taskamanger;

option java_package = "br.com.bmo.proto.taskamanager";
option java_multiple_files = true;

message Task {
  string id = 1;
  string description = 2;
  string details = 3;
  string status = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateTaskRequest {
  Task task = 1;
}

message CreateTaskResponse {
  Task task = 1;
}

message ReadTaskRequest {
  string task_id = 1;
}

message ReadTaskResponse {
  Task task = 1;
}

service TaskManagerService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {};
  rpc ReadTask(ReadTaskRequest) returns (ReadTaskResponse) {};
}